# rosemary

./: .gitignore  Makefile  README.md  setup.cfg
code_snippets/: jpt.py  meter.py  metrics.py  np.py  pd.py  plot.py  plt.py  torch.py  torch_transform.py  tree.py
notebooks/: script_compute_iou.py
slurm/: generic.sh  jpt.sbatch  run_jobs_from_file.sh  speek.sh
src/rosemary/: __init__.py  config.py  jpt.py  meter.py  metrics.py  np.py  parallel.py  pd.py  plt.py  submit.py  torch.py  torch_transform.py  torch_transform_det.py  torchvision.py  tree.py
