[metadata]
name = rosemary
version = 0.0.3
author = Peiqi Wang
author_email = wpq@mit.edu
description = re-usable code snippets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tt6746690/code_snippets/
project_urls =
    Bug Tracker = https://github.com/tt6746690/code_snippets/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    matplotlib
    scikit-learn

[options.packages.find]
where = src
